# syn-graphs

./: Cargo.toml  refresh-extern.bash  refresh-test-vectors.bash
src/: build.rs  dot.rs  lib.rs  main.rs  mermaid.rs  pet.rs  unparse.rs
test-vectors/: graphviz-gallery.commit  graphviz.commit
tests/: dot-gallery.rs  dot-vectors.rs  dot.rs
