[package]
name = "syn-graphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
proc-macro2 = { version = "1.0.67", default-features = false }
syn = { version = "2.0.37", default-features = false, features = [
    "parsing",
    "printing",
] }
quote = { version = "1.0.33", default-features = false }
derive-quote-to-tokens = { version = "0.1.0", path = "../derive-quote-to-tokens" }
derive_more = { version = "0.99.17", default-features = false, features = ["display"] }
indenter = { version = "0.3.3", features = ["std"] }

[dev-dependencies]
colored = "2.0.4"
include_dir = "0.7.3"
miette = { version = "5.10.0", features = ["fancy"] }
pretty_assertions = "1.4.0"
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0.37", default-features = false, features = [
    "printing",
    "extra-traits",
] }
thiserror = "1.0.48"
