[package]
name = "syn-graphs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aatifsyed/syn-graphs"
documentation = "https://docs.rs/syn-graphs"
homepage = "https://crates.io/crates/syn-graphs"
description = "graph description language parsers using syn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-syn-parse = "0.1.5"
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0.37", default-features = false, features = [
    "parsing",
    "printing",
    "extra-traits",
    "clone-impls",
] }
quote = { version = "1.0.33", default-features = false }
derive-quote-to-tokens = "0.1.0"
derive_more = { version = "0.99.17", default-features = false, features = [
    "display",
] }
petgraph = { version = "0.6.4", default-features = false }
is_type = "0.2.1"

[dev-dependencies]
colored = "2.0.4"
either = "1.9.0"
include_dir = "0.7.3"
miette = { version = "5.10.0", features = ["fancy"] }
pretty_assertions = "1.4.0"
proc-macro2 = { version = "1.0.67", default-features = false, features = [
    "span-locations",
] }
thiserror = "1.0.48"
syn-miette = "0.1.0"
petgraph = "0.6.4"
